// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ensureDir - file collision errors 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "Error: Wanted to ensure that the directory path src/api/test_fixtures/ensure_dir/collision/file existed, but src/api/test_fixtures/ensure_dir/collision/file was a file, not a directory
  at ensureDir (<rootDir>/bin/.../yavascript)
  at <eval> (<evalScript>)
",
  "stdout": "",
}
`;

exports[`exists - dead link 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "false
",
}
`;

exports[`exists - existent target dir 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "true
",
}
`;

exports[`exists - existent target file 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "true
",
}
`;

exports[`exists - link to dir 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "true
",
}
`;

exports[`exists - link to file 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "true
",
}
`;

exports[`exists - nonexistent target 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "false
",
}
`;

exports[`isDir - on dead link 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "false
",
}
`;

exports[`isDir - on dir 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "true
",
}
`;

exports[`isDir - on file 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "false
",
}
`;

exports[`isDir - on link to file 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "false
",
}
`;

exports[`isDir - on link to folder 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "true
",
}
`;

exports[`isLink - on dead link 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "true
",
}
`;

exports[`isLink - on dir 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "false
",
}
`;

exports[`isLink - on file 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "false
",
}
`;

exports[`isLink - on link to file 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "true
",
}
`;

exports[`isLink - on link to folder 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "true
",
}
`;

exports[`readFile 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "hello, world!!! :D
あ
",
}
`;

exports[`readlink 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "[
  "./nowhere-real"
  "./some-file"
  "./some-folder"
]
",
}
`;
